Fix CODETOOLS-7902337 correcting use of Process